--- a/Laundry-Mart/index.html
+++ b/Laundry-Mart/index.html
@@ -9,7 +9,7 @@
   <body>
     <header><h1>Welcome to Laundry Wallah/Laundry Mart</h1></header>
     <p>
-      <strong>Laundry Wallah / Laundry Mart</strong>is your one-stop solution
+      <strong>Laundry Wallah / Laundry Mart</strong> is your one-stop solution
       for all your laundry needs. With state-of-the-art facilities and modern
       equipment, we ensure efficient and thorough cleaning of your clothes. Our
       experienced staff is committed to providing high-quality service and quick
@@ -77,7 +77,7 @@
     </form>
 
     <footer>
-      <p>Contact us at: info@laundrymart.com</p>
+      <p><b>Contact us at: info@laundrymart.com</b></p>
     </footer>
   </body>
 </html>
