--- a/Task-2-CSS-Selectors/index.html
+++ b/Task-2-CSS-Selectors/index.html
@@ -8,16 +8,17 @@
 </head>
 <body>
     <h1 class="head">This is h1 tag</h1>
-    <h2 class="head" id="bglime">This is h2 tag</h2>
-    <h3 class="head">This is h3 tag</h3>
-    <p>Hello This is my First Paragraph.</p>
+    <h2 class="head" id="bglime"> This is a h2 heading with <span class="htag">"head"</span> as a class and "bglime" as an id. </h2>
+    <h3 class="head">This is a h3 heading with head as a class.</h3>
+    <p>This is a p paragraph tag without any id or class styled using "p" element selector</p>
     <p id="para">Hello This is my Second <span>Paragraph.</span</p>
-    <p>Hello This is my Third Paragraph.</p>
+    <ptag>Show this output without inline CSS nor using class or id for "a" tag</ptag>
 
-    <ul>
-        <li><span>here</span></li>
-        <li><span>here</span></li>
+    <ul type="disc">
+        <li class="first">Click <a href="https://upskillmafia.com/mern/campus">here</a> to go to UpskillMafia</li>
+        <li>Click <a href="https://www.google.co.in/">here</a> to go to Google</li>
     </ul>
+
 
 
     <ol>
