--- a/Group-Task-1/index.html
+++ b/Group-Task-1/index.html
@@ -7,26 +7,31 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <header>Sippline</header>
-      <ul>
-        <li>Shop</li>
-        <li>About</li>
-        <li>Blogs</li>
-        <li>Contact</li>
-      </ul>
-
-      <button>Buy Now</button>
-    </nav>
-
-    <div>
-      <h1>Sippline drinking shields- The "Glass ka Mask"</h1>
-      <p>
-        Sippline Drinking Shield aims to protect the user from not just such
-        fatal diseases but, also the mild ones such as common flu. Sippline
-        drinking shield does the same job a face mask does, albeit differently.
-      </p>
-      <button>Buy the Glass Mask</button>
+    <div class="clip-overlay">
+      <img src="./img.png" alt="Sippline" />
     </div>
+    <section>
+      <nav>
+        <header>Sippline</header>
+        <ul>
+          <li>Shop</li>
+          <li>About</li>
+          <li>Blogs</li>
+          <li>Contact</li>
+        </ul>
+
+        <button>Buy Now</button>
+      </nav>
+        <div>
+          <h1>Sippline drinking shields- The "Glass ka Mask"</h1>
+          <p>
+            Sippline Drinking Shield aims to protect the user from not just such
+            fatal diseases but, also the mild ones such as common flu. Sippline
+            drinking shield does the same job a face mask does, albeit
+            differently.
+          </p>
+          <button>Buy the Glass Mask</button>
+        </div>
+    </section>
   </body>
 </html>
