--- a/Task-3-CSS/index.html
+++ b/Task-3-CSS/index.html
@@ -1,19 +1,15 @@
-
-
-<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Display</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Image Display</title>
+    </head>
+    <body>
         <div class="image-container">
-            <img src="https://image.lexica.art/full_webp/0ec2cde6-779b-4613-9838-0c1657a18056" alt="Sample Image">
+            <img src="https://image.lexica.art/full_webp/0ec2cde6-779b-4613-9838-0c1657a18056" />
+            <button>Click Me</button>
         </div>
-        <button>Click Me</button>
-    </div>
-</body>
+    </body>
 </html>
